Make header text smaller, preventing overflow on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -26,10 +26,9 @@ header {
 	background-position: center;
 	background-attachment: scroll;
 	> a{
-		font-size: 120%;
-		font-weight: bold;
 		display: block;
-		padding: 2rem;
+		padding: 1rem;
+		margin: 1rem;
 	}
 }
 
